[package]
name = "frontend"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies]
shared.workspace = true
zoon.workspace = true
wellen.workspace = true
web-sys = { version = "*", features = ["FileSystemFileHandle"] }
gloo-file = { version = "0.3.0", features = ["futures"] }
