[package]
name = "shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
publish.workspace = true

[dependencies]
wellen.workspace = true
moonlight.workspace = true
# @TODO update `futures_util_ext` - add feature `sink`, set exact `futures-util` version
futures-util = { version = "0.3.30", features = ["sink"] }

[features]
frontend = ["moonlight/frontend"]
backend = ["moonlight/backend"]
